force-app/main/default/objects/Notification_Request__c/Notification_Request__c.object-meta.xml
<CustomObject>
    <description
  >Back-in-stock notification system for customers. Records are created when users request to be notified when a product becomes available again. Used by the ENOS e-commerce platform to manage customer communication and inventory alerts.</description>
    <label>Notification Request</label>
    <nameField>
        <displayFormat>NR-{0000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>