force-app/main/default/objects/Notification_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Notification Requests</relationshipLabel>
    <relationshipName>Notification_Requests</relationshipName>

    <type>Lookup</type>
</CustomField>