force-app/main/default/objects/Notification_Request__c/fields/User_Contact__c.field-meta.xml
<CustomField>
    <fullName>User_Contact__c</fullName>
    <label>User Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notification Requests</relationshipLabel>
    <relationshipName>Notification_Requests</relationshipName>

    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>